Fixed the nav images not showing up on github pages

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,6 +77,9 @@ nav {
     img {
         object-fit: contain;
         height: auto;
+        width: 100px;
+        height: 100px;
+        border-radius: 5%;
     }
     .selected {
         background-color: red;
@@ -93,19 +96,19 @@ pixelart {
 }
 
 .sp4cebar-image {
-    background-image: url("/assets/sp4cebar logo 100x100.jpg");
+    /* background-image: url("/assets/sp4cebar logo 100x100.jpg"); */
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    /* width: 100px;
+    height: 100px; */
     
     background-repeat: no-repeat;
     background-size: cover;
     /* background-attachment: fixed; */
 }
 .sp4cebank-image {
-    background-image: url("/assets/sp4cebar_memory_bank.png");
-    width: 100px;
-    height: 100px;
+    /* background-image: url("/assets/sp4cebar_memory_bank.png"); */
+    /* width: 100px;
+    height: 100px; */
     
     background-repeat: no-repeat;
     background-size: cover;
